# agentic-rag

./: .env  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  benchmark_agent.py  benchmark_langsmith_multi.py  chunkers.py  config.py  constants.py  convfinqa_sft_axolotl.jsonl  cot_format.py  create_dataset.ipynb  create_dataset.py  create_db.ipynb  create_db.py  create_docstore.py  create_vector_store.py  create_vectorstore.py  curriculum_loader.py  curriculum_tools.py  czyssrs_eval.py  data_flow_diagram.py  embedder.py  environment.yaml  eval.ipynb  eval.py  eval_dual_retrieval_r_at3.py  eval_ret.py  evaluate_with_llm.py  evaluator_full.py  extracted.jsonl  fine-tune.py  fine-tune2.py  finetune.py  ft.py  get_data.sh  graph.py  judge_llm.py  (+31 more)
arxiv/: llm2.py
configs/: fine_tuning.yaml
data/: README.md  agentic_chunks.json  content.json  content.txt  create_dataset.py  create_db.py  llm_parse_table.py  multi_eval_results.jsonl  multiturn_benchmark.jsonl  populate_langsmith.py  retrieve.py  retrieve_stub.py
data2/: benchmark_unified_mock.jsonl  lg_chunks.jsonl  miele_chunks.jsonl  tesla_chunks.jsonl  whirlpool_chunks.jsonl
docker/: Dockerfile
document_agent/: document_parsing_agent.py  schema_utils.py
eval/: eval_retrieval_r@3.py  eval_retriever_only.py
experiments/: eval_easy.csv  eval_hard.csv
langgraph/: graph.py  nodes.py
logs/: chat_graph_log_20250410_143711.txt  chat_output.txt
models/: llm.py  llm_stub.py  merge_tat_lora.py
prompts/: cot_format.py
scripts/: curriculum_loader.py  fine-tune.py  inference.py  llm_eval_judge.py  merge.py  upload_data_to_hf.py
tools/: curriculum_tools.py  data_tools.py  qa_tools.py  run_pipeline.py  table_tools.py
utils/: agentic_chunker.py  benchmark_multiturn_test.jsonl  curriculum_loader.py  data_preprocessing.py  judge_llm.py  llm_eval_judge.py  logging.py  metrics.py  prompts.py  prompts_backup.py  structure_aware_chunker.py  title_chunker.py  trim_chunks.py  types.py  upload_langsmith_multi.py  upload_langsmith_single.py
workflow/: graph.py  nodes.py  nodes_test.py  state.py
(+10 files in other folders)
