[tool.poetry]
name = "tomoroai-engineer-assignment"
version = "0.1.0"
description = ""
authors = ["Justinas Kazanavicius <justas.kazan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.4"
pandas = "^2.2.2"
transformers = "^4.44.1"
jupyter = "^1.0.0"
openai = "^1.42.0"
chromadb = "^0.5.5"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-chroma = "^0.1.2"
langfuse = "^2.44.0"
sentence-transformers = "^3.0.1"
langchain-openai = "^0.1.22"
xmltodict = "^0.13.0"
cohere = "^5.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
